# cmsx-autograder

./: .gitignore  Cargo.toml  GUIDELINES.md  PLAN.md  flake.nix
.sqlx/: query-004564cba148776c19316c8adea9a1721e0ed992447b4cb9944b5afb857dd2e8.json  query-03c85aed65ffa5dad8b30078f265113554a8e4fc26ebcee0ddb083afac037d97.json  query-056c4e0c0b9891013e198faec986f1bc6b2088cc8b079733f4a381e5860ecbc9.json  query-0807ab89dfebb6973abe5a843b08abf09d78255ac9b54922afc45c4cbe900447.json  query-08d7597a13e0f1b2b8f65db4435c75dd342661129095f6df6326e08fb238243e.json  query-09143cc7f8beaedb22af1dd4c9ec92be856fbbe56ce0acb6315151160aa0b340.json  query-0b13f603516de0f4120bae38b465660f88150f78bbba79b42e7a9ee404db0e42.json  query-14b2d478bb6fc90800da4f3bc8b9b38c63f43cb4190f918c0bb464081c29d5ea.json  query-1961ebb3b62f663c9f5d5c40b65583750353083e274a573eba89d734c81763e5.json  query-1af5590d06fc4e2edef298a0f0e0b1e931e409c616919f1cd6d00936c69e0100.json  query-1c43f0d86b791bd33f5418c09d68429bf200b0e656a486d40797f65e72510dcb.json  query-1f3f8d30184dbad1076cee06dff70d7dfe45396039e3a31ba770edb22183db5d.json  query-20dc69ee9cf1cd6dd382de73d680231dc4c8614f62ae582ca37687da0109626c.json  query-2350c3c403dc81408515ea4c64126703ca05d63e4d29cf593c26d1ea64e9e600.json  query-250ed70ea287e464009502ccb2b3565fee425d2cf62b982571df39344f65dc77.json  query-264769137197b9b1679d15202b5406fa5228f18b52af6892fd53631099d0cff2.json  query-289102257c46efcd9b8c37ed82193da1f0683ce5363cf098702a0b56205c2b60.json  query-29a0102528b9569799f842c5048cf798e12a2619f8c4db83b65314cd58728998.json  query-2ce5371bc631fa9b618917a0e4e600f33fde7bcd588233f830edd58ca6133af3.json  query-307d19af5f9aa7e28bfe878952a7873be3ad38964ec94925ee7b90734ea678b3.json  query-346f4c8bc51c03c04fa6ac882470508084fa526a849f5950b548910a4e47117b.json  query-34f247fe8550100916dd91cd2c3e8b02862dbeae837c0853731333e7ab4ed47f.json  query-36763cc467e9da8022502975657158e6d9b895b59a96f1972affda636f8b8691.json  query-3748a8104fe3221260ccd6d8dc550af4a4a6199ee3111b6cc646848182d3a550.json  query-39441e8da817a18f8f9eba4f3a244a708dbaf487cb53586f74c5b83c91cec87b.json  query-3e8d76e3fba8563f8d063eb008b1ddeca7a940d5b7ca204ad1b4c6237eb17f02.json  query-414d1dfb22e25e1f6388aa7d89d79103bc773a1bcf14bfd9571b77f04fe0ddfe.json  query-49d5674f3692957b4fab586d3ed303cfc005a4af3fc21f88651b4154182df0f3.json  query-4c0de462a17326de0515b76ab3b103fe663bf7b47c65da314590416fc83a44c3.json  query-50658020d859140cc8e220e8f5d7fbf6c48c3f4b8f3b9484abc274320c23f927.json  query-52636b811d2a2d2d291e8e6ca3ee9b41060df97930fc9eaf505f8584109fbf5e.json  query-52fa38bbeb1fa348021252952016702e0795a5bfa5b9d858f43c718dfb73117e.json  query-53b5bac672aefab2410884fe310f35f7fdb41d42df43a4e10bf0b9bc19792f73.json  query-54c245d275ab88c33ed1731f0a4de821ca509432586828ed36368a9925e9e948.json  query-55d15bfdc470f1a109270d39f39e2bbd77152a4617f6f1c40e04fbd02e5c455f.json  query-58c3da618864113b1b37c3993009e9f7221da44a5c6174ef3a5e108a8b770af7.json  query-58c8df2b9ba09009143396f6ebaaa20aa72a97c9b5a76883cfe7fcae2d9fd9db.json  query-5d06b39aa5d7ef7047431907d9c0d6a42710fb67f161f4cae967b55813be8b61.json  query-5db33666d13c1eea470831256a78185a95b2f4bdf7241ac185cb77bb0541e0ce.json  query-5e317b7a1a54849bb9c884ae0f38fda18c05cce533517396947b789160636cfc.json  (+52 more)
crates/cmsx-control-plane/: Cargo.toml
crates/cmsx-control-plane/src/: app.rs  cli.rs  config.rs  db.rs  error.rs  job_maintenance.rs  main.rs  storage.rs  test_support.rs  workers.rs
crates/cmsx-control-plane/src/routes/: admin.rs  assignments.rs  cmsx.rs  common.rs  health.rs  inspection.rs  jobs.rs  mod.rs  submissions.rs  workers.rs
crates/cmsx-control-plane/tests/: cli.rs
crates/cmsx-core/: Cargo.toml
crates/cmsx-core/src/: lib.rs  protocol.rs
crates/cmsx-worker/: Cargo.toml
crates/cmsx-worker/src/: auth.rs  capacity.rs  client.rs  config.rs  events.rs  job_contract.rs  job_runner.rs  lib.rs  main.rs  worker.rs  workspace.rs
crates/cmsx-worker/src/executor/: docker_socket.rs  in_worker.rs  mod.rs  utils.rs
crates/cmsx-worker/tests/: docker_socket_executor.rs  in_worker_executor.rs
crates/cmsx-worker/tests/common/: mod.rs
examples/assignments/hello-python/: grade.py
flake-parts/: cargo.nix  cmsx-db-tools.nix  devshell.nix  docker-images.nix  e2e-tests.nix  git-hooks.nix  services.nix
migrations/: 20260504174709_init.sql  20260505170156_workers_remote.sql
python/sdk/: pyproject.toml
python/sdk/src/cmsx_autograder/: __init__.py  __main__.py
python/sdk/tests/: test_sdk.py
