[workspace]
resolver = "2"
members = ["crates/cmsx-control-plane", "crates/cmsx-core"]
metadata.crane.name = "cmsx-autograder"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
object_store = { version = "0.13", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
] }
sanitize-filename = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
url = "2"
argon2 = "0.5"
hex = "0.4"
sha2 = "0.11"
