[package]
name = "cmsx-control-plane"
edition = "2024"
version.workspace = true

[dependencies]
cmsx-core = { path = "../cmsx-core" }

anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
