[package]
name = "cmsx-control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
cmsx-core = { path = "../cmsx-core" }

anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
