[package]
name = "cmsx-worker"
version.workspace = true
edition.workspace = true

[dependencies]
cmsx-core = { path = "../cmsx-core" }

anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
figment.workspace = true
futures-util.workspace = true
jwt-simple.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
