[project]
name = "cmsx-autograder"
version = "0.1.0"
description = "Python SDK for CMSX autograder grading scripts"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cmsx-grade = "cmsx_autograder.__main__:main"

[dependency-groups]
dev = ["pytest>=9.0", "basedpyright>=1.38.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
